<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ily_device_control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <TextView
        android:id="@+id/itv_iamge_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAF0E6"
        android:textSize="15dp"
        android:textColor="#000000"
        android:text="@string/tx_result_image"/>

    <lecho.lib.hellocharts.view.LineChartView
        android:id="@+id/ilc_line_chart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/itv_iamge_title"
        android:background="#FAF0E6"
        />
    <TextView
        android:id="@+id/itv_report_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ilc_line_chart"
        android:background="#CAE1FF"
        android:textSize="15dp"
        android:textColor="#000000"
        android:text="@string/tx_report_title"/>
    <TextView
        android:id="@+id/itv_result_report"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/itv_report_title"
        android:background="#CAE1FF"
        android:textSize="15dp"
        android:textColor="#000000"/>
    <Button
        android:id="@+id/ibt_start_record"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ibt_quit_app"
        android:layout_alignParentLeft="true"
        android:background="#D2691E"
        android:textColor="#000000"
        android:textSize="15dp"
        android:text="@string/tx_statr_record"/>

    <Button
        android:id="@+id/ibt_stop_record"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ibt_quit_app"

        android:layout_alignParentRight="true"
        android:background="#3CB371"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:text="@string/tx_stop_record"/>
    <Button
        android:id="@+id/ibt_quit_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#6495ED"
        android:textColor="#000000"
        android:textSize="15dp"
        android:text="@string/tx_quit_app"/>
</RelativeLayout>
